--- a/.github/actions/pact-can-i-deploy/action.yml
+++ b/.github/actions/pact-can-i-deploy/action.yml
@@ -26,6 +26,7 @@ runs:
   using: "composite"
   steps:
     - name: Create environment in Pact Broker
+      if: ${{ inputs.run_can_i_deploy == true && (inputs.environment == 'main' || inputs.environment == 'uat' || inputs.environment == 'stg' || inputs.environemnt == 'staging' || inputs.environment == 'prod' || inputs.environment == 'production' )}}
       shell: bash
       # Returns true if environment already exists (we don't need to create it again)
       run: |
@@ -36,7 +37,7 @@ runs:
         pactfoundation/pact-cli:latest \
         broker create-environment --name ${{ inputs.environment }} || true
     - name: Pact Can I Deploy?
-      if: ${{ inputs.run_can_i_deploy == true }}
+      if: ${{ inputs.run_can_i_deploy == true && (inputs.environment == 'main' || inputs.environment == 'uat' || inputs.environment == 'stg' || inputs.environemnt == 'staging' || inputs.environment == 'prod' || inputs.environment == 'production' )}}
       shell: bash
       run: |
         docker run --rm \
@@ -50,3 +51,7 @@ runs:
           --to-environment ${{ inputs.environment }} \
           --retry-while-unknown 5 \
           --retry-interval 10
+    - name: No Can I Deploy check for this environment
+      if: ${{ inputs.run_can_i_deploy == true && inputs.environment != 'main' && inputs.environment != 'uat' && inputs.environment != 'stg' && inputs.environment != 'staging' && inputs.environment != 'prod' && inputs.environment != 'production' }}
+      shell: bash
+      run: echo "Don't need to check Can I Deploy for ${{ inputs.environment }}. Expected environments are main, uat, stg, staging, prod or production."
