--- a/.github/workflows/pact-and-publish.yml
+++ b/.github/workflows/pact-and-publish.yml
@@ -12,7 +12,7 @@ on:
         type: string
         default: temurin
       pact_test_task:
-        required: false
+        required: true
         type: string
       pacticipant_name:
         required: true
@@ -61,7 +61,7 @@ permissions:
 jobs:
 
   pact-test-and-publish:
-    if: ${{ inputs.pact_test_task != '' && github.actor != 'dependabot[bot]' }}
+    if: ${{ github.actor != 'dependabot[bot]' }}
     name: Pact tests
     runs-on: ubuntu-latest
     env:
