--- a/.github/workflows/pact-provider-webhook.yml
+++ b/.github/workflows/pact-provider-webhook.yml
@@ -12,9 +12,6 @@ on:
         type: string
         default: temurin
       pact_test_task:
-        required: false
-        type: string
-      provider_name:
         required: true
         type: string
       consumer_name:
@@ -41,7 +38,7 @@ permissions:
 jobs:
 
   pact-test-and-publish-verification:
-    if: ${{ inputs.pact_test_task != '' && github.actor != 'dependabot[bot]' }}
+    if: ${{ github.actor != 'dependabot[bot]' }}
     name: Pact tests
     runs-on: ubuntu-latest
     env:
