Added property which was originally removed

--- a/.github/workflows/pact-provider-webhook.yml
+++ b/.github/workflows/pact-provider-webhook.yml
@@ -20,6 +20,10 @@ on:
       consumer_branch:
         required: true
         type: string
+        # For removal, references still in other projects
+      provider_name:
+        required: false
+        type: string
 
     secrets:
       gh_token:
