--- a/.github/workflows/ecr-publish-image.yml
+++ b/.github/workflows/ecr-publish-image.yml
@@ -116,6 +116,10 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
+      - name: Pre-pull buildpack builder image
+        run: |
+          docker pull paketobuildpacks/builder:base
+
       - name: Build image
         id: build-image
         env:
