--- a/.github/workflows/ecr-publish-image.yml
+++ b/.github/workflows/ecr-publish-image.yml
@@ -134,7 +134,7 @@ jobs:
           image_name=${REGISTRY}/${REPOSITORY}:${{ inputs.image_version }}
           ./gradlew ${gradle_subproject}bootBuildImage \
             --imageName $image_name \
-            --builder paketobuildpacks/gradle:latest \
+            --builder paketobuildpacks/builder-jammy-full:latest \
             -Dspring.boot.build-image.publish=true
           echo "image_name=$image_name" >> $GITHUB_OUTPUT
           echo "Image built with version: $image_name"
