specify docker version

--- a/.github/workflows/ecr-publish-image.yml
+++ b/.github/workflows/ecr-publish-image.yml
@@ -3,6 +3,10 @@ name: Publish image to ECR
 on:
   workflow_call:
     inputs:
+      docker_version:
+        required: false
+        type: string
+        default: latest
       java_version:
         required: false
         type: string
@@ -75,6 +79,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v6
+
+      - name: Set Docker version
+        uses: docker/setup-docker-action@v4
+        with:
+          version: ${{ inputs.docker_version }}
+
       - name: Set up JDK ${{ inputs.java_version }}
         uses: actions/setup-java@v5
         with:
@@ -115,10 +125,6 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
-
-      - name: Force docker-java API version
-        run: |
-          echo "api.version=1.44" > ~/.docker-java.properties
 
       - name: Build image
         id: build-image
